# loki

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
config/: loki.example.yaml
src/loki/: __init__.py  benchmark.py  cli.py  config.py  errors.py  javatext.py  pipeline.py  planner.py  proc.py
src/loki/bootstrap/: __init__.py  baseline.py  exemplars.py  gradle_deps.py
src/loki/deliver/: __init__.py  pr.py  report.py
src/loki/generate/: __init__.py  contextpack.py  generator.py  worker_pool.py
src/loki/llm/: __init__.py  client.py  parse.py  prompts.py
src/loki/scan/: __init__.py  ast.py  exclude.py  graph.py  prioritize.py
src/loki/state/: __init__.py  model.py  store.py
src/loki/verify/: __init__.py  autofix.py  coordinator.py  edgecheck.py  gates.py  jacoco.py  pit.py
tests/: conftest.py  test_benchmark.py  test_bootstrap_deliver.py  test_cli.py  test_config.py  test_coordinator.py  test_full_run.py  test_gates.py  test_javatext.py  test_llm.py  test_pipeline.py  test_scan.py  test_state.py  test_verify_parsers.py
