[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loki"
version = "0.1.0"
description = "LOKI — LLM-Orchestrated Killer-test Intelligence: a swarm that generates meaningful JUnit 5 tests for Spring Boot repos."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "PyYAML>=6.0",
    "javalang>=0.13.0",
]

[project.optional-dependencies]
http = ["httpx>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
loki = "loki.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
